--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://qiusli.github.io
 title: 逆旅，行人
-subtitle: 李秋实的博客
+subtitle: 暗淡蓝点
 author: 李秋实
 simple_search: https://www.google.com/search
 description:
